--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 configurations.all {
     resolutionStrategy.force 'com.android.support:support-annotations:27.1.1'
